--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ animated_fins:	  true
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
-# whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''	   
+# whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''	 
+url:              "http://RailsBridgeChi.github.io"  
 
 # Owner/author information
 owner:
@@ -48,15 +49,15 @@ bing_verify:
 # For external links add external: true
 links:
   - title: Home
-    url: /blog
+    url: /
     external: false
     icon: home
   - title: <i class="icon-book"></i> Documentation
-    url: /blog/documentation
+    url: /documentation
   - title: Categories
-    url: /blog/categories
+    url: /categories
   - title: Tags
-    url: /blog/tags
+    url: /tags
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/Chicago
@@ -85,7 +86,7 @@ kramdown:
 
 prose:
   rooturl: '_posts'
-  siteurl: 'http://railsbridgechi.github.io/blog'
+  siteurl: 'http://railsbridgechi.github.io'
   media: 'images'
   metadata:
     _posts:
