--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            RailsBridge Chicago
 description:      Free (and fun!) Ruby on Rails workshops for women. Get it, girls!
-logo:             
+logo:             railsbridge-chicago-logo.png
 disqus_shortname: RailsBridgeChi
 # Assign a default image for your site's header and footer
 default_bg:       cover-photo.jpg
@@ -27,10 +27,10 @@ owner:
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:    RailsBridge Chicago provides free (and fun!) Ruby on Rails workshops for women
   # Social networking links used in footer. Update and remove as you like.
+  tumblr:         railsbridgechicago
   twitter:        RailsBridgeChi
   facebook:       RailsBridgeChi
   github:         RailsBridgeChi
-  tumblr:         railsbridgechicago
   stackexchange:  
   linkedin:       
   instagram:      
