--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,10 @@ links:
     url: /
     external: false
     icon: home
+  - title: Blog
+    url: /blog
+    external: false
+    icon: home
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/Chicago
@@ -62,7 +66,7 @@ future:      true
 highlighter: pygments
 markdown:    kramdown
 paginate:    6
-paginate_path: "page:num"
+paginate_path: "/blog/page:num"
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
