Theme and configuration tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            RailsBridge Chicago
-description:      Free (and fun!) Ruby on Rails workshops for women. Get it, girls!
+description:      "Free (and fun!) Ruby on Rails workshops for women. Get it, girls!"
 logo:             railsbridge-chicago-logo.png
 disqus_shortname: RailsBridgeChi
 # Assign a default image for your site's header and footer
